--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-`# Byte-compiled / optimized / DLL files
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
@@ -123,9 +123,12 @@ celerybeat.pid
 
 # Environments
 .env
+.venv
 env/
+venv/
 ENV/
-
+env.bak/
+venv.bak/
 
 # Spyder project settings
 .spyderproject
